# fly-in

./: Makefile  README.md  TODO.md  fly_in.py  requirements.txt
modules/mlx/python/: pyproject.toml
modules/mlx/python/mlx.egg-info/: PKG-INFO  SOURCES.txt
modules/visual_engine/: pyproject.toml
modules/visual_engine/visual_engine/: VEngine.py  __init__.py
modules/visual_engine/visual_engine/assets/: VTextures.py
modules/visual_engine/visual_engine/buffer/: VCanvas.py  VFramebuffer.py
modules/visual_engine/visual_engine/errors/: VErrors.py
requirements/: dev.txt  prod.txt
src/parsing/: parser.py
src/parsing/grammars/: comments.lark  general.lark
src/parsing/transformer/: stransformer.py
tests/: test_canvas_framebuffer.py  test_events.py  test_vtextures.py
